--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "gh-pages": "^3.2.3",
     "logger": "^0.0.1",
     "modern-normalize": "^1.1.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -50,9 +51,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.31.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "prop-types": "^15.7.2"
   }
 }
